# LEGOSIM_MICRO

./: .gitmodules  README.md  apply_patch.sh  patch.sh  setup_env.sh
.changed_files/gem5/src/: SConscript
.changed_files/popnet_chiplet/: CMakeLists.txt  sim_router.cc
.changed_files/popnet_chiplet/changes/: router.cpp  router.h
.changed_files/snipersim/frontend/: frontend_defs.h
MNSIMChiplet/: MNSIM_Chiplet.cpp  MNSIM_Chiplet.py  result_0_1.res  result_0_2.res  test.py  weight.pth
artifact/: README.md  bottelneck_analyse.py  requirements.txt  sync_overhead.py
artifact/DSE/: chiplet_overhead.py  power_budget.py  run.sh
artifact/HBM_DDR/: DDR.cpp  HBM.cpp  makefile  modify.py  result.py  run.sh  storage.cpp  storage.yml
artifact/HBM_DDR/topology/: mesh_6_6_flit_2.gv  star_6_6_flit_2.gv
artifact/MLP/: comm_delay.py  makefile  mlp.cpp  mlp.yml  modify.py  run.sh
artifact/MLP/topology/: NVL_6_6_flit_4.gv  mesh_6_6_flit_4.gv  meshll_6_6_flit_2.gv
artifact/UCIe_PCIe/: DRAM.cpp  dsa.cpp  makefile  modify.py  net.cpp  net.yml  run.sh
artifact/auto_transformer/: CMakeLists.txt  auto_transformer.yml  mapDevice.csv  modify.py  run.sh  transformer.cpp
artifact/auto_transformer/topology/: NVL_6_6_flit_4.gv  meshll_6_6_flit_4.gv  star_6_6_flit_2.gv  torus_6_6_flit_4.gv
artifact/bfs_cuda/: bfs.cpp  bfs.cu  bfs.yml  makefile  mnsim.cpp  modify.py  run.sh
artifact/matmul/: heatMap.py  makefile  matmul.cpp  matmul.cu  matmul.yml  mnsim.cpp  modify.py  run.sh
artifact/result/: result_1.csv  result_2.csv  result_3.csv
benchmark/: ten.rar  vgg13.tar
benchmark/BEVfusion/: add.py  float32.py  onnx.sh
benchmark/MLP_NVL/: bench_flit_2.txt  bench_flit_4.txt  delayInfo_flit_2.txt  delayInfo_flit_4.txt  makefile  mlp.cpp  mlp.yml
benchmark/MLP_mesh/: bench_flit_2.txt  bench_flit_4.txt  cim.cpp  comm_delay.py  delayInfo_flit_2.txt  delayInfo_flit_4.txt  generate_gpu_config.py  makefile  mlp.cpp  mlp.yml  mlp_config.yml  mnsim.cpp
benchmark/MLP_mesh_2/: cim.cpp  generate_gpu_config.py  makefile  mlp.cpp  mlp.cu  mlp.yml  mlp_config.yml  mnsim.cpp
benchmark/MLP_meshll/: bench_flit_2.txt  bench_flit_4.txt  delayInfo_flit_2.txt  makefile  mlp.cpp  mlp.cu  mlp.yml
benchmark/MLP_star/: bench_flit_2.txt  bench_flit_4.txt  delayInfo_flit_4.txt  makefile  mlp.cpp  mlp.yml
benchmark/Transformer_cuda/: decoder.cpp  decoder.cu  decoder.yml  delayInfo_2.txt  makefile  pacCountInfo.txt
benchmark/auto_transformer/: CMakeLists.txt  generate_yml.py  matmul.cu  multiHeadTransformer.cu  transformer.cpp
benchmark/conv_2GPU/: conv.cpp  conv.cu  conv.yml  makefile
benchmark/conv_4GPU/: cim.cpp  comm_delay.py  conv.cpp  conv.cu  conv.yml  delayInfo_1000_weight.txt  delayInfo_10weight.txt  delayInfo_15_core.txt  delayInfo_20_weight.txt  delayInfo_GTX480.txt  delayInfo_TITANV.txt  makefile  result.txt
benchmark/conv_4GPU_0/: conv.cpp  conv.cu  delayInfo_1.txt  pacCountInfo.txt
benchmark/conv_4GPU_1/: conv.cpp  conv.cu  conv.yml  delayInfo_GTX480.txt  makefile
benchmark/conv_4GPU_2/: conv.cpp  conv.cu
benchmark/conv_4GPU_4/: conv.cpp  conv.cu  pacCountInfo.txt
benchmark/conv_4gpu/: conv.cpp  conv.cu  conv.yml
benchmark/conv_6GPU/: conv.cpp  conv.cu  conv.yml  makefile
benchmark/conv_GPU/: conv.cpp  conv.cu  conv.yml  delayInfo_15.txt  delayInfo_80.txt
benchmark/conv_one_GPU/: conv.cpp  conv.cu
benchmark/conv_one_GPU_0/: conv.cu  conv.yml
benchmark/conv_one_GPU_1/: conv.cu  makefile
benchmark/conv_one_GPU_2/: conv.cu
benchmark/conv_one_GPU_4/: conv.cu
benchmark/dfs/: dfs.cpp
benchmark/dfs_Homogeneous/: dfs.cpp
benchmark/dfs_heterogeneous/: dfs-master.cpp  dfs-worker.cpp  dfs.cu  dfs.yml
benchmark/dlrm_cpp/: CMakeLists.txt  dlrm.cpp  dlrm.cu  generate_yml.py  mapDevice.csv
benchmark/dlrm_cpp/real_test/: CMakeLists.txt  dlrm_real.cu
benchmark/dlrm_npu/: dlrm.cpp  dlrm.yml  makefile  npu.cpp
benchmark/matmul/: ReadBench.py  bench_NVL.txt  bench_NVL_2.txt  bench_change_mesh.txt  bench_mesh.txt  bench_mesh_2.txt  bench_mesh_flit_2.txt  bench_meshll.txt  bench_meshll_2.txt  bench_star.txt  bench_torus.txt  delayInfo_NVL_flit_2.txt  delayInfo_NVL_flit_4.txt  delayInfo_change_mesh.txt  delayInfo_mesh_flit_2.txt  delayInfo_meshll_flit_2.txt  delayInfo_meshll_flit_4.txt  delayInfo_star_flit_2.txt  delayInfo_star_flit_4.txt  delayInfo_torus_flit_2.txt  delayInfo_torus_flit_4.txt  dotGenHeatMap.py  dotGenRecycle.py  heatMap.py  makefile  matmul.cpp  matmul.cu  matmul.yml  pacCountInfo.txt
benchmark/matmul_NVL/: matmul.yml  mnsim.cpp
benchmark/matmul_mesh/: matmul.yml
benchmark/matmul_test/: makefile  matmul.cu  matmul.yml
benchmark/matmul_torus/: matmul.cpp  matmul.cu  matmul.yml
benchmark/real_transformer/: decoder  decoder.cu
benchmark/resnet/: cim.cpp  dram.cpp  makefile  resnet.cpp  resnet.yml  resnet_block.cu
benchmark/resnet_18/: MNSIM_0_0.cpp  MNSIM_1_0.cpp  MNSIM_2_0.cpp  MNSIM_3_0.cpp  makefile  resnet18.yml  sniper_chip.cpp
benchmark/resnet_NVL/: bench_first.txt  resnet.cpp  resnet.yml
benchmark/resnet_mesh/: bench_first.txt  resnet.yml
benchmark/resnet_star/: resnet.yml  resnet_block.cu
benchmark/resnet_torus/: makefile  mnsim.cpp  resnet.yml
benchmark/ten/: cim.cpp  ddr.cpp  makefile  npupcmodel.cpp  pcmodel.cpp  pcmodel.yml  perf.py
benchmark/test_gem5/: test.py
benchmark/transformer/: CMakeLists.txt  auto_transformer.yml  dsa.cpp  generate_yml.py  heatMap.py  matmul.cu  mesh_2_2.gv  modify.py  run.sh
benchmark/vgg13/: MNSIM_0_0.cpp  MNSIM_0_1.cpp  MNSIM_0_2.cpp  MNSIM_0_3.cpp  MNSIM_1_0.cpp  MNSIM_1_1.cpp  makefile  sniper_chip.cpp  vgg13.yml
interchiplet/: CMakeLists.txt  workflow.md  流程.md
interchiplet/includes/: cmd_handler.h  cmdline_options.h  net_bench.h  net_delay.h
interchiplet/patch/: gem5.diff  gpgpu-sim.diff  popnet.diff  scale-sim.diff  snipersim.diff
interchiplet/srcs/: cmd_handler.cpp  interchiplet.cpp
tasks-vgg13/: MNSIMChiplet_0_0.cfg  MNSIMChiplet_0_1.cfg  MNSIMChiplet_0_2.cfg  MNSIMChiplet_0_3.cfg  MNSIMChiplet_1_0.cfg  MNSIMChiplet_1_1.cfg  MNSIMChiplet_1_2.cfg
(+23 files in other folders)
